deployments/kong_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
  name: kong
spec:
  rules:
  - host: kong.DOMAIN
    http:
      paths:
      - backend:
          service:
            name: kong-kong-proxy
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kong.DOMAIN
    secretName: scorpio-kong-cert
